<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_root_cell_layout" >

    <ImageView
        android:layout_gravity="top"
        android:layout_marginRight="10dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/main_weather_image" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="0dp"
            android:text="Sydney"
            android:id="@+id/main_city_text" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_weather_info_layout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_cell_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="25"
                        android:textSize="25sp"
                        android:id="@+id/main_temperature_text"
                        android:gravity="center_vertical" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/activity_text_margin"
                        android:text="@string/temperature_unit"
                        android:textSize="25sp"
                        android:id="@+id/main_temperature_unit"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/activity_cell_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Light Drizzle"
                        android:textSize="10sp"
                        android:id="@+id/main_weather_description_text" />
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feels_like"
                            android:layout_marginRight="@dimen/activity_text_margin"
                            android:id="@+id/main_real_feel_label" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/activity_text_margin"
                            android:id="@+id/main_real_feel_text" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/precipitation"
                            android:layout_marginRight="@dimen/activity_text_margin"
                            android:id="@+id/main_prec_label" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/activity_text_margin"
                            android:id="@+id/main_prec_text" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/precipitation_unit"
                            android:id="@+id/main_prec_unit" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_cell_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_favourite_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:layout_marginRight="@dimen/activity_text_margin"
                    android:id="@+id/main_humidity_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_text_margin"
                    android:id="@+id/main_humidity_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:layout_marginRight="@dimen/activity_text_margin"
                    android:id="@+id/main_barom_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_text_margin"
                    android:id="@+id/main_barom_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:layout_marginRight="@dimen/activity_text_margin"
                    android:id="@+id/main_wind_speed_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_text_margin"
                    android:id="@+id/main_win_speed_text" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed_unit"
                    android:id="@+id/main_win_speed_unit" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_cell_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/observed_at"
                    android:layout_marginRight="@dimen/activity_text_margin"
                    android:id="@+id/main_observed_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_observed_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>